Fix emoji icon alignement

--- a/styles/notion-styles.css
+++ b/styles/notion-styles.css
@@ -159,6 +159,7 @@
 {
 	width: 24px;
 	height: 24px;
+	justify-content: center;
 }
 
 .heading_1
